[package]
name = "tfat"
version = "0.1.0"
description = "Two Factor Authentication(2FA) Tool - Help to generate 2FA code"


[dependencies]
clap = "~2.32"
data-encoding = "~2.1.2"
serde = "1.0"
serde_derive = "1.0"
rust-argon2 = "0.4.0"
ring = "0.14.6"
dirs = "1.0.2"
toml = "0.4.10"
failure = "0.1.5"
rpassword = "2.1.0"
clipboard = "0.5.0"
